fixed folder structure and updated notes in html format

--- a/persistance/Persistence_using_File_and_DB/ex-1/notes1.html
+++ b/persistance/Persistence_using_File_and_DB/ex-1/notes1.html
@@ -1,13 +1,90 @@
-Basic Serialization with Pickle:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic Serialization with Pickle</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        pre {
+            background-color: #eaeaea;
+            padding: 10px;
+            border-left: 5px solid #3498db;
+            overflow-x: auto;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
 
+    <h1>Basic Serialization with Pickle</h1>
 
-Why: Pickle is a Python module used for serializing and deserializing Python objects. It’s useful for saving the state of an object to a file and restoring it later.
+    <h2>Why Use Pickle?</h2>
+    <p>
+        Pickle is a Python module used for serializing and deserializing Python objects. 
+        It’s useful for saving the state of an object to a file and restoring it later. 
+        This is particularly helpful in scenarios where you want to save the progress of a program 
+        or share data between different Python programs.
+    </p>
 
-What: We’ll create a Person class with attributes name, educational_institutions, and colleagues. Then, we’ll serialize an instance of this class to a file using Pickle.
+    <h2>What We Will Do</h2>
+    <p>
+        We’ll create a <code>Person</code> class with attributes <code>name</code>, 
+        <code>educational_institutions</code>, and <code>colleagues</code>. 
+        Then, we’ll serialize an instance of this class to a file using Pickle.
+    </p>
 
-How: Use the pickle.dump() method to serialize the object and pickle.load() to deserialize it.
+    <h2>How to Serialize and Deserialize</h2>
+    <p>
+        Use the <code>pickle.dump()</code> method to serialize the object and 
+        <code>pickle.load()</code> to deserialize it.
+    </p>
 
-
-Example Flow: 
+    <h2>Example Flow</h2>
+    <pre>
 Save: pickle.dump(p, file) → writes Person object to person.pkl as bytes.
 Load: pickle.load(file) → reads bytes from person.pkl, finds Person class in main.py, rebuilds the object.
+    </pre>
+
+    <h2>Example Code</h2>
+    <pre>
+import pickle
+
+class Person:
+    def __init__(self, name, educational_institutions, colleagues):
+        self.name = name
+        self.educational_institutions = educational_institutions
+        self.colleagues = colleagues
+
+# Create an instance of Person
+p = Person("John Doe", ["University A", "College B"], ["Alice", "Bob"])
+
+# Serialize the object
+with open('person.pkl', 'wb') as file:
+    pickle.dump(p, file)
+
+# Deserialize the object
+with open('person.pkl', 'rb') as file:
+    loaded_person = pickle.load(file)
+    print(loaded_person.name)  # Output: John Doe
+    </pre>
+
+    <footer>
+        <p>Note: This document was created using Blackbox AI.</p>
+    </footer>
+
+</body>
+</html>
