--- a/persistance/Persistence_using_File_and_DB/ex-2/notes1.html
+++ b/persistance/Persistence_using_File_and_DB/ex-2/notes1.html
@@ -1,13 +1,78 @@
-2. Deserialization with Pickle:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deserialization with Pickle</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        pre {
+            background-color: #eaeaea;
+            padding: 10px;
+            border-left: 5px solid #3498db;
+            overflow-x: auto;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
 
+    <h1>Deserialization with Pickle</h1>
 
-Why: To restore the serialized object back into memory.
+    <h2>Why Use Deserialization?</h2>
+    <p>
+        Deserialization is the process of restoring the serialized object back into memory. 
+        This allows you to retrieve the state of an object that was previously saved, 
+        enabling you to continue working with it as if it had never been removed from memory.
+    </p>
 
-What: Read the serialized file and recreate the Person object.
+    <h2>What We Will Do</h2>
+    <p>
+        We will read the serialized file and recreate the <code>Person</code> object 
+        that was saved earlier using Pickle.
+    </p>
 
-How: Use pickle.load() to deserialize the object.
+    <h2>How to Deserialize</h2>
+    <p>
+        Use the <code>pickle.load()</code> method to deserialize the object from the file.
+    </p>
 
-
-Example Flow: 
+    <h2>Example Flow</h2>
+    <pre>
 Save: pickle.dump(p, file) → writes Person object to person.pkl as bytes.
 Load: pickle.load(file) → reads bytes from person.pkl, finds Person class in main.py, rebuilds the object.
+    </pre>
+
+    <h2>Example Code</h2>
+    <pre>
+import pickle
+
+# Assuming the Person class is already defined as shown previously
+
+# Deserialize the object
+with open('person.pkl', 'rb') as file:
+    loaded_person = pickle.load(file)
+    print(loaded_person.name)  # Output: John Doe
+    print(loaded_person.educational_institutions)  # Output: ['University A', 'College B']
+    print(loaded_person.colleagues)  # Output: ['Alice', 'Bob']
+    </pre>
+
+    <footer>
+        <p>Note: This document was created using Blackbox AI.</p>
+    </footer>
+
+</body>
+</html>
