--- a/persistance/Persistence_using_File_and_DB/ex-7/notes7.html
+++ b/persistance/Persistence_using_File_and_DB/ex-7/notes7.html
@@ -1,8 +1,96 @@
-7. Custom Serialization for Complex Objects:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Custom Serialization for Complex Objects</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        pre {
+            background-color: #eaeaea;
+            padding: 10px;
+            border-left: 5px solid #3498db;
+            overflow-x: auto;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
 
+    <h1>Custom Serialization for Complex Objects</h1>
 
-Why: Complex objects like graphs require custom serialization logic.
+    <h2>Why Use Custom Serialization?</h2>
+    <p>
+        Complex objects like graphs require custom serialization logic because their structure 
+        may not be easily represented using standard serialization methods. Custom serialization 
+        allows you to define how to convert these objects into a format that can be easily 
+        stored or transmitted, and then reconstructed later.
+    </p>
 
-What: Serialize a Graph object containing nodes and edges.
+    <h2>What We Will Do</h2>
+    <p>
+        We will serialize a <code>Graph</code> object containing nodes and edges, allowing us 
+        to save the graph's structure in a format that can be easily restored.
+    </p>
 
-How: Implement custom serialization logic using dictionaries.
+    <h2>How to Serialize a Graph</h2>
+    <p>
+        Implement custom serialization logic using dictionaries to represent the nodes and edges 
+        of the graph.
+    </p>
+
+    <h2>Example Code</h2>
+    <pre>
+import json
+
+class Graph:
+    def __init__(self):
+        self.nodes = set()
+        self.edges = {}
+
+    def add_node(self, value):
+        self.nodes.add(value)
+        self.edges[value] = []
+
+    def add_edge(self, from_node, to_node):
+        self.edges[from_node].append(to_node)
+
+    def to_dict(self):
+        return {
+            'nodes': list(self.nodes),
+            'edges': self.edges
+        }
+
+    def to_json(self):
+        return json.dumps(self.to_dict())
+
+# Create a Graph instance
+graph = Graph()
+graph.add_node("A")
+graph.add_node("B")
+graph.add_edge("A", "B")
+
+# Serialize the Graph object to JSON
+graph_json = graph.to_json()
+print(graph_json)
+    </pre>
+
+    <footer>
+        <p>Note: This document was created using Blackbox AI.</p>
+    </footer>
+
+</body>
+</html>
