--- a/persistance/Persistence_using_File_and_DB/ex-5/notes5.html
+++ b/persistance/Persistence_using_File_and_DB/ex-5/notes5.html
@@ -1,5 +1,84 @@
-Why: YAML is a human-readable data serialization format, often used for configuration files.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Serialization with YAML</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        pre {
+            background-color: #eaeaea;
+            padding: 10px;
+            border-left: 5px solid #3498db;
+            overflow-x: auto;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
 
-What: Serialize a Car object to YAML.
+    <h1>Serialization with YAML</h1>
 
-How: Use the PyYAML library to serialize the object.
+    <h2>Why Use YAML?</h2>
+    <p>
+        YAML (YAML Ain't Markup Language) is a human-readable data serialization format, 
+        often used for configuration files. Its simplicity and readability make it a popular 
+        choice for developers who need to manage complex data structures in a clear and 
+        concise manner.
+    </p>
+
+    <h2>What We Will Do</h2>
+    <p>
+        We will serialize a <code>Car</code> object to YAML format, allowing us to easily 
+        store and share the car's data in a human-readable way.
+    </p>
+
+    <h2>How to Serialize to YAML</h2>
+    <p>
+        Use the <code>PyYAML</code> library to serialize the object. If you don't have 
+        PyYAML installed, you can install it using pip:
+    </p>
+    <pre>
+pip install pyyaml
+    </pre>
+
+    <h2>Example Code</h2>
+    <pre>
+import yaml
+
+class Car:
+    def __init__(self, make, model, year):
+        self.make = make
+        self.model = model
+        self.year = year
+
+    def to_yaml(self):
+        return yaml.dump(self.__dict__)
+
+# Create an instance of Car
+car = Car("Tesla", "Model S", 2022)
+
+# Serialize the Car object to YAML
+car_yaml = car.to_yaml()
+print(car_yaml)
+    </pre>
+
+    <footer>
+        <p>Note: This document was created using Blackbox AI.</p>
+    </footer>
+
+</body>
+</html>
