--- a/persistance/Persistence_using_File_and_DB/ex-8/notes8.html
+++ b/persistance/Persistence_using_File_and_DB/ex-8/notes8.html
@@ -1,8 +1,87 @@
-8. Skipping Attributes During Serialization:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skipping Attributes During Serialization</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        pre {
+            background-color: #eaeaea;
+            padding: 10px;
+            border-left: 5px solid #3498db;
+            overflow-x: auto;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
 
+    <h1>Skipping Attributes During Serialization</h1>
 
-Why: To exclude sensitive data during serialization.
+    <h2>Why Skip Attributes?</h2>
+    <p>
+        Skipping attributes during serialization is important to exclude sensitive data, such as 
+        passwords or personal information, from being stored or transmitted. This helps to 
+        protect user privacy and maintain data security.
+    </p>
 
-What: Serialize a User object but skip sensitive attributes like password.
+    <h2>What We Will Do</h2>
+    <p>
+        We will serialize a <code>User</code> object but skip sensitive attributes like 
+        <code>password</code>, ensuring that only non-sensitive information is serialized.
+    </p>
 
-How: Override the __dict__ attribute or use a custom method.
+    <h2>How to Skip Attributes</h2>
+    <p>
+        You can override the <code>__dict__</code> attribute or use a custom method to control 
+        which attributes are included during serialization.
+    </p>
+
+    <h2>Example Code</h2>
+    <pre>
+import json
+
+class User:
+    def __init__(self, username, password, email):
+        self.username = username
+        self.password = password  # Sensitive data
+        self.email = email
+
+    def to_dict(self):
+        # Return a dictionary excluding the password
+        return {
+            'username': self.username,
+            'email': self.email
+        }
+
+    def to_json(self):
+        return json.dumps(self.to_dict())
+
+# Create a User instance
+user = User("john_doe", "securepassword123", "john@example.com")
+
+# Serialize the User object to JSON
+user_json = user.to_json()
+print(user_json)  # Output: {"username": "john_doe", "email": "john@example.com"}
+    </pre>
+
+    <footer>
+        <p>Note: This document was created using Blackbox AI.</p>
+    </footer>
+
+</body>
+</html>
